<resources>
    <string name="app_name">ChildrensLibrayApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Usuario</string>
    <string name="nav_header_subtitle">correoUsuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Historial</string>
    <string name="menu_slideshow">Recomendaciones</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Configuración</string>
    <string name="menu_send">Cerrar</string>
    <string name="info">Donde viven los monstruos es un libro infantil escrito e ilustrado por el autor estadounidense Maurice Sendak. Fue publicado en 1963 y al año siguiente el autor recibió la medalla Caldecott en su autoría. También ganó el Boston Globe-Horn Book Award y fue un libro notable de la ALA.</string>
    <string name="titulo">Un monstruo viene a verme</string>
    <string name="autor">Patrick Ness</string>
    <string name="Email">Ingrese su email</string>
    <string name="Pass">Ingrese su contraseña</string>
    <string name="Emailn">Ingresa tu email</string>
    <string name="Passn">Ingresa tu contraseña</string>
    <string name="Regis">Registrarse</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Codigo">Ingrese su codigo</string>

    <string name="listado">¡Todos los libros!</string>
    <string name="busqueda">¡Busca tu libro!</string>
    <string name="genero">Genero</string>
    <string name="autor2">Autor</string>
    <string name="titulo2">Titulo</string>
    <string name="codigo">Código</string>
    <string name="Array">Buscar</string>
    <string name="Buscadorcodigo">Ingrese el codigo</string>
    <string name="Buscadorgenero">Seleccione el genero</string>
    <string name="Buscadorautor">Ingrese el autor</string>
    <string name="Buscadortitulo">Ingrese el titulo</string>
    <string name="Trabajador">Trabajador</string>

    <string name="Registro">Registrate</string>
    <string name="Nombre">Nombres</string>
    <string name="Apellido">Apellidos</string>
    <string name="Confcorr">Confirme su correo</string>
    <string name="ConfPass">Confirme su contraseña</string>


    <string name="Bot_generateData" />
    <string name="buscodExacta">Búsqueda exacta</string>
    <string name="b_squeda_por_rango">Búsqueda por rango</string>
    <string name="desde">desde</string>
    <string name="hasta">hasta</string>
    <string name="array">Array</string>
    <string name="bst">BST</string>
    <string name="nick">Nickname</string>


</resources>
