<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/busc"
    tools:context=".searches.Busqueda">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_busqueda"
                android:layout_width="280dp"
                android:layout_height="69dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:hint="@string/busqueda"
                android:textColorHint="@color/common_google_signin_btn_text_dark_default"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botgenero"
                android:layout_width="238dp"
                android:layout_height="69dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/confe"
                android:hint="@string/genero"
                android:onClick="Genero"
                android:textColorHint="@color/letra"
                android:textSize="30sp" />

            <Button
                android:id="@+id/butautor"
                android:layout_width="238dp"
                android:layout_height="69dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/confe"
                android:hint="@string/autor2"
                android:onClick="Autor"
                android:textColorHint="@color/letra"
                android:textSize="30sp" />

            <Button
                android:id="@+id/butitle"
                android:layout_width="238dp"
                android:layout_height="69dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/confe"
                android:hint="@string/titulo2"
                android:onClick="Titulo"
                android:textColorHint="@color/letra"
                android:textSize="30sp" />

            <Button
                android:id="@+id/butcodigo"
                android:layout_width="238dp"
                android:layout_height="69dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/confe"
                android:hint="@string/codigo"
                android:onClick="Codigo"
                android:textColorHint="@color/letra"
                android:textSize="30sp" />

            <Button
                android:id="@+id/but_verListado"
                android:layout_width="238dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/confe"
                android:hint="@string/listado"
                android:onClick="Listado"
                android:textColorHint="@color/letra"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>