<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/registro"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="76dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="30dp"
                android:hint="@string/Registro"
                android:textColorHint="@color/design_default_color_secondary_variant"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/Nombre"
                android:inputType="textPersonName"
                android:textColor="@color/letra"
                android:textColorHint="@color/letra"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_regini" />

            <EditText
                android:id="@+id/et_apellidos"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/Apellido"
                android:inputType="textPersonName"
                android:textColor="@color/letra"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="371dp"
                android:layout_height="63dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/letra"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

            <EditText
                android:id="@+id/et_confcorreo"
                android:layout_width="367dp"
                android:layout_height="67dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:hint="@string/Confcorr"
                android:inputType="textEmailAddress"
                android:textColor="@color/letra"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_correo" />

            <EditText
                android:id="@+id/et_cont"
                android:layout_width="246dp"
                android:layout_height="47dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="141dp"
                android:layout_marginRight="141dp"
                android:ems="10"
                android:hint="@string/Pass"
                android:inputType="textPassword"
                android:textColor="@color/letra"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confcorreo" />

            <EditText
                android:id="@+id/et_confcont"
                android:layout_width="232dp"
                android:layout_height="58dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="155dp"
                android:layout_marginRight="155dp"
                android:ems="10"
                android:hint="@string/ConfPass"
                android:inputType="textPassword"
                android:textColor="@color/letra"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cont" />

            <Button
                android:id="@+id/but_registro"
                android:layout_width="163dp"
                android:layout_height="64dp"
                android:layout_marginStart="168dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="155dp"
                android:layout_marginRight="155dp"
                android:hint="@string/Regis"
                android:textColorHint="@color/login"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confcont" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>